<resources>
    <string name="app_name">Assignment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_preferred_units">Select preferred units</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="location_coordinates">Location Coordinates</string>
    <string name="dashboardTitle">Dashboard</string>
    <string name="distance">Distance</string>
    <string name="empty">--</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enable_location_tracking_label">Enable Location Tracking</string>
    <string name="step_history_label">Step History</string>
    <string name="total_steps">Total Steps</string>
    <string name="last_known_location">Last Known Location:</string>

    <string-array name="unit_list">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
</resources>